--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "CLI tool for querying multiple models with prompts from a CSV"
 readme = "README.md"
 requires-python = ">=3.7"
-license = { text = "MIT" }
+license = { file = "LICENSE" }
 authors = [
     { name = "Rohit Krishnan", email = "rohit.krishnan@email.com" }
 ]
