--- a/.gitignore
+++ b/.gitignore
@@ -157,5 +157,10 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 .DS_Store
+
+# ParaLLM RAG example artifacts
+examples/chroma_db/
+examples/bm25_index.pkl
+RAG_plans.md
