--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
-bodo==2025.3.3
-llm==0.23
-pandas==2.2.3
-python-dotenv==1.1.0
-setuptools==78.1.0
+beautifulsoup4>=4.13.4
+bodo>=2025.5
+boto3>=1.37.32
+botocore>=1.37.32
+chromadb>=0.6.3
+google-genai>=1.16.0
+llm>=0.26a0
+nltk>=3.9.1
+numpy>=2.2.6
+pandas>=2.2.3
+protobuf>=6.31.0
+pydantic>=2.11.5
+pypdf>=5.5.0
+pytest>=8.3.5
+python-dotenv>=1.1.0
+python_docx>=1.1.2
+PyYAML>=6.0.2
+rank_bm25>=0.2.2
+reportlab>=4.4.0
+Requests>=2.32.3
+sentence_transformers>=4.0.1
+typer>=0.15.4
