--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-bodo==2025.3.3
-llm==0.23
-pandas==2.2.3
-python-dotenv==1.1.0
-setuptools==78.1.0
+bodo
+llm>=0.23
+pandas>=2.0
+python-dotenv>=1.0
+setuptools>=64
