--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,19 @@ authors = [
 ]
 license = { file = "LICENSE" }
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 
+# Use flexible versions and make Bodo optional
 dependencies = [
-  "bodo>=2025.3.3",
+  "bodo",            # Install Bodo by default; acts as drop-in replacement for pandas
   "llm>=0.23",
-  "pandas==2.2.3",
-  "python-dotenv==1.1.0",
-  "pydantic>=2.0.0"
+  "pandas>=2.0",
+  "python-dotenv>=1.0",
+  "pydantic>=2.0"
 ]
+
+[project.optional-dependencies]
+# Extras kept for future extension; none required currently.
 
 [project.urls]
 Homepage = "https://github.com/strangeloopcanon/parallm"
